--- a/main.html
+++ b/main.html
@@ -9,10 +9,12 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<table>
-		<tr>
-			<th>roll number</th>
-			<th>name</th>
-		</tr>
+		<thead>
+			<tr>
+				<th>roll number</th>
+				<th>name</th>
+			</tr>
+		</thead>
 		<tr>
 			<td>01</td>
 			<td>Ram</td>
